@startuml Entidades

' Tópicos de Programação I - UnB - Cabo Calebe
' Diagrama de Classes UML: Versão Final Sincronizada 1:1 com Código C++

' Configurações Visuais e Estéticas
skinparam classAttributeIconSize 0
skinparam defaultFontName Inter
skinparam linetype polyline
skinparam ranksep 60
skinparam nodesep 30

skinparam package {
    BorderColor #1E90FF
    BackgroundColor #F0F8FF
    FontColor #1E90FF
}
skinparam class {
    BackgroundColor #FFFFE0
    BorderColor #DAA520
}

' ===================================
' 1. PACOTE DE ENTIDADES
' ===================================
package Entidades {

    ' NÍVEL 1: BASE DA HERANÇA
    abstract class Pessoa << Entidade Base >> {
        # Nome nome
        # Email email
        --
        + Pessoa(Nome, Email)
        + exibirInfo() : void <<abstract>>

        + setPessoaNome(const Nome &)
        + setPessoaEmail(const Email &)
        + getNome() : string
        + getEmail() : string
    }

    ' NÍVEL 2: HERDEIROS
    together {
        class Gerente {
            - Ramal ramal
            - Senha senha
            --
            + Gerente()
            + Gerente(Nome, Email, Ramal, Senha)
            + Gerente(GerenteDTO &)

            + setNome(const Nome &)
            + setEmail(const Email &)
            + setRamal(const Ramal &)
            + setSenha(const Senha &)
            + getRamal() : string
            + getSenha() : string
        }

        class Hospede {
            - Endereco endereco
            - Cartao cartao
            --
            + Hospede()
            + Hospede(Nome, Email, Endereco, Cartao)

            + setNome(const Nome &)
            + setEmail(const Email &)
            + setEndereco(const Endereco &)
            + setCartao(const Cartao &)
            + getEndereco() : string
            + getCartao() : string
        }
    }

    ' HERANÇA
    Pessoa <|-- Gerente
    Pessoa <|-- Hospede

    ' NÍVEL 3: NEGÓCIO CENTRAL
    class Hotel {
        - Nome nome
        - Endereco endereco
        - Telefone telefone
        - Codigo codigo
        --
            + Hotel()
            + Hotel(Nome, Endereco, Telefone, Codigo)
            + Hotel(HotelDTO &)

            + setNome(const Nome &)
            + setEndereco(const Endereco &)
            + setTelefone(const Telefone &)
            + setCodigo(const Codigo &)

            + getNome() : string
            + getEndereco() : string
            + getTelefone() : string
            + getCodigo() : string
    }

    together {
        class Quarto {
            - Numero numero
            - Capacidade capacidade
            - Dinheiro diaria
            - Ramal ramal
            --
            + Quarto()
            + Quarto(Numero, Capacidade, Dinheiro, Ramal)

            + setNumero(const Numero &)
            + setCapacidade(const Capacidade &)
            + setDiaria(const Dinheiro &)
            + setRamal(const Ramal &)

            + getNumero() : string
            + getCapacidade() : int
            + getDiaria() : int
            + getRamal() : string
        }

        class Reserva {
            - Data chegada
            - Data partida
            - Dinheiro dinheiro
            - Codigo codigo
            --
            + Reserva()
            + Reserva(Data, Data, Dinheiro, Codigo)

            + setChegada(const Data &)
            + setPartida(const Data &)
            + setDinheiro(const Dinheiro &)
            + setCodigo(const Codigo &)

            + getChegada() : Data
            + getPartida() : Data
            + getDinheiro() : int
            + getCodigo() : string
        }
    }

    ' --- RELAÇÕES DE ASSOCIAÇÃO ---

    Gerente "1" -- "0..*" Hotel : gerencia/associa
    Hotel "1" -right-> "0..*" Quarto : oferece
    Hotel "1" -down-> "0..*" Reserva : possui
    Hospede "1" -- "0..*" Reserva : faz
    Quarto "1" -left-> "0..*" Reserva : alocado_em
}


' ===================================
' 2. PACOTE DE DOMÍNIOS (BASE)
' ===================================
package Dominios {
    together {
        class Nome << dominio >>
        class Email << dominio >>
        class Ramal << dominio >>
        class Senha << dominio >>
        class Endereco << dominio >>
        class Cartao << dominio >>
        class Telefone << dominio >>
    }

    together {
        class Codigo << dominio >>
        class Capacidade << dominio >>
        class Dinheiro << dominio >>
        class Data << dominio >>
        class Numero << dominio >>
    }
}

' ===================================
' 3. RELAÇÕES DE COMPOSIÇÃO (Entidade É COMPOSTA por Domínios)
' ===================================

Pessoa *-- Nome
Pessoa *-- Email

Gerente *-- Ramal
Gerente *-- Senha

Hospede *-- Endereco
Hospede *-- Cartao

Hotel *-- Telefone
Hotel *-- Codigo
Hotel *-- Nome
Hotel *-- Endereco

Quarto *-- Capacidade
Quarto *-- Dinheiro
Quarto *-- Ramal
Quarto *-- Numero

Reserva *-- Data
Reserva *-- Dinheiro
Reserva *-- Codigo

@enduml